Fix the scrollbar problem in the side menu of SPC and fix some bugs

--- a/statics/css/style-index.css
+++ b/statics/css/style-index.css
@@ -6,11 +6,11 @@
 }
 
 .menu-items {
-	position: absolute;
+	position: relative;
 	height: auto;
 	width: 100%;
-	top: 65%;
-	transform: translate(0, -50%);
+	top: 5%;
+	/*transform: translate(0, -50%);*/
 	right: 0;
 }
 
@@ -29,7 +29,7 @@
 	position: relative;
 	right: 50%;
 	color: #959595;
-	transform: translate(50%, -50%);
+	transform: translate(50%,0%);
 	font-size: 3em;
 	transition: all .2s;
 	margin-top: 30px;
